code changed for java 17
code changed for java 17